@@ -682,7 +682,7 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|/** @return A good old 1.4 Scorer */
+comment|/** @return Returns BooleanScorer2 that uses and provides skipTo(),      *          and scores documents in document number order.      */
 DECL|method|scorer
 specifier|public
 name|Scorer
@@ -694,166 +694,17 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-comment|// First see if the (faster) ConjunctionScorer will work.  This can be
-comment|// used when all clauses are required.  Also, at this point a
-comment|// BooleanScorer cannot be embedded in a ConjunctionScorer, as the hits
-comment|// from a BooleanScorer are not always sorted by document number (sigh)
-comment|// and hence BooleanScorer cannot implement skipTo() correctly, which is
-comment|// required by ConjunctionScorer.
-name|boolean
-name|allRequired
-init|=
-literal|true
-decl_stmt|;
-name|boolean
-name|noneBoolean
-init|=
-literal|true
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|weights
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|BooleanClause
-name|c
-init|=
-operator|(
-name|BooleanClause
-operator|)
-name|clauses
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|c
-operator|.
-name|isRequired
-argument_list|()
-condition|)
-name|allRequired
-operator|=
-literal|false
-expr_stmt|;
-if|if
-condition|(
-name|c
-operator|.
-name|getQuery
-argument_list|()
-operator|instanceof
-name|BooleanQuery
-condition|)
-name|noneBoolean
-operator|=
-literal|false
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|allRequired
-operator|&&
-name|noneBoolean
-condition|)
-block|{
-comment|// ConjunctionScorer is okay
-name|ConjunctionScorer
+name|BooleanScorer2
 name|result
 init|=
 operator|new
-name|ConjunctionScorer
+name|BooleanScorer2
 argument_list|(
 name|similarity
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|weights
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|Weight
-name|w
-init|=
-operator|(
-name|Weight
-operator|)
-name|weights
-operator|.
-name|elementAt
-argument_list|(
-name|i
-argument_list|)
-decl_stmt|;
-name|Scorer
-name|subScorer
-init|=
-name|w
-operator|.
-name|scorer
-argument_list|(
-name|reader
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|subScorer
-operator|==
-literal|null
-condition|)
-return|return
-literal|null
-return|;
-name|result
-operator|.
-name|add
-argument_list|(
-name|subScorer
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|result
-return|;
-block|}
-comment|// Use good-old BooleanScorer instead.
-name|BooleanScorer
-name|result
-init|=
-operator|new
-name|BooleanScorer
-argument_list|(
-name|similarity
+argument_list|,
+name|minNrShouldMatch
+argument_list|,
+name|allowDocsOutOfOrder
 argument_list|)
 decl_stmt|;
 for|for
@@ -1397,156 +1248,44 @@ return|;
 block|}
 block|}
 block|}
-DECL|class|BooleanWeight2
-specifier|private
-class|class
-name|BooleanWeight2
-extends|extends
-name|BooleanWeight
-block|{
-comment|/* Merge into BooleanWeight in case the 1.4 BooleanScorer is dropped */
-DECL|method|BooleanWeight2
-specifier|public
-name|BooleanWeight2
-parameter_list|(
-name|Searcher
-name|searcher
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|super
-argument_list|(
-name|searcher
-argument_list|)
-expr_stmt|;
-block|}
-comment|/** @return An alternative Scorer that uses and provides skipTo(),      *          and scores documents in document number order.      */
-DECL|method|scorer
-specifier|public
-name|Scorer
-name|scorer
-parameter_list|(
-name|IndexReader
-name|reader
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|BooleanScorer2
-name|result
-init|=
-operator|new
-name|BooleanScorer2
-argument_list|(
-name|similarity
-argument_list|,
-name|minNrShouldMatch
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|weights
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|BooleanClause
-name|c
-init|=
-operator|(
-name|BooleanClause
-operator|)
-name|clauses
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-decl_stmt|;
-name|Weight
-name|w
-init|=
-operator|(
-name|Weight
-operator|)
-name|weights
-operator|.
-name|elementAt
-argument_list|(
-name|i
-argument_list|)
-decl_stmt|;
-name|Scorer
-name|subScorer
-init|=
-name|w
-operator|.
-name|scorer
-argument_list|(
-name|reader
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|subScorer
-operator|!=
-literal|null
-condition|)
-name|result
-operator|.
-name|add
-argument_list|(
-name|subScorer
-argument_list|,
-name|c
-operator|.
-name|isRequired
-argument_list|()
-argument_list|,
-name|c
-operator|.
-name|isProhibited
-argument_list|()
-argument_list|)
-expr_stmt|;
-elseif|else
-if|if
-condition|(
-name|c
-operator|.
-name|isRequired
-argument_list|()
-condition|)
-return|return
-literal|null
-return|;
-block|}
-return|return
-name|result
-return|;
-block|}
-block|}
-comment|/** Indicates whether to use good old 1.4 BooleanScorer. */
-DECL|field|useScorer14
+comment|/** Whether hit docs may be collected out of docid order. */
+DECL|field|allowDocsOutOfOrder
 specifier|private
 specifier|static
 name|boolean
-name|useScorer14
+name|allowDocsOutOfOrder
 init|=
 literal|false
 decl_stmt|;
+comment|/**    * Indicates whether hit docs may be collected out of docid    * order. In other words, with this setting,     * {@link HitCollector#collect(int,float)} might be    * invoked first for docid N and only later for docid N-1.    * Being static, this setting is system wide.    * If docs out of order are allowed scoring might be faster    * for certain queries (disjunction queries with less than    * 32 prohibited terms). This setting has no effect for     * other queries.    */
+DECL|method|setAllowDocsOutOfOrder
+specifier|public
+specifier|static
+name|void
+name|setAllowDocsOutOfOrder
+parameter_list|(
+name|boolean
+name|allow
+parameter_list|)
+block|{
+name|allowDocsOutOfOrder
+operator|=
+name|allow
+expr_stmt|;
+block|}
+comment|/**    * Whether hit docs may be collected out of docid order.    * @see #setAllowDocsOutOfOrder(boolean)    */
+DECL|method|getAllowDocsOutOfOrder
+specifier|public
+specifier|static
+name|boolean
+name|getAllowDocsOutOfOrder
+parameter_list|()
+block|{
+return|return
+name|allowDocsOutOfOrder
+return|;
+block|}
+comment|/**    * @deprecated Use {@link #setAllowDocsOutOfOrder(boolean)} instead.    */
 DECL|method|setUseScorer14
 specifier|public
 specifier|static
@@ -1557,11 +1296,13 @@ name|boolean
 name|use14
 parameter_list|)
 block|{
-name|useScorer14
-operator|=
+name|setAllowDocsOutOfOrder
+argument_list|(
 name|use14
+argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * @deprecated Use {@link #getAllowDocsOutOfOrder()} instead.    */
 DECL|method|getUseScorer14
 specifier|public
 specifier|static
@@ -1570,7 +1311,8 @@ name|getUseScorer14
 parameter_list|()
 block|{
 return|return
-name|useScorer14
+name|getAllowDocsOutOfOrder
+argument_list|()
 return|;
 block|}
 DECL|method|createWeight
@@ -1584,40 +1326,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-if|if
-condition|(
-literal|0
-operator|<
-name|minNrShouldMatch
-condition|)
-block|{
-comment|// :TODO: should we throw an exception if getUseScorer14 ?
 return|return
-operator|new
-name|BooleanWeight2
-argument_list|(
-name|searcher
-argument_list|)
-return|;
-block|}
-return|return
-name|getUseScorer14
-argument_list|()
-condition|?
-operator|(
-name|Weight
-operator|)
 operator|new
 name|BooleanWeight
-argument_list|(
-name|searcher
-argument_list|)
-else|:
-operator|(
-name|Weight
-operator|)
-operator|new
-name|BooleanWeight2
 argument_list|(
 name|searcher
 argument_list|)
